# wikipedia-golf

./: LICENSE
.github/workflows/: down_jawiki.yaml  parse.yaml  search_longest.yaml  sql2bin.yaml
python/: pyproject.toml
python/notebook/: gen_db.ipynb
python/src/: page_redirect.py  page_redirect_linktarget.py  parse.py
rust/: Cargo.toml
rust/src/: structs.rs  util.rs
