[package]
name = "wikipedia-golf"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.27", features = ["derive"] }
num24 = { git = "https://github.com/Nakanishi123/num24.git", version = "0.1.1", features = [
    "serde",
] }
rayon = "1.10.0"
rusqlite = { version = "0.33.0", features = ["bundled", "blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
tqdm = "0.7.0"
zstd = "0.13.2"

[profile.release]
lto = true
